app/styles/ui/_dialog.scss
dialog {
  border: var(--base-border);
  box-shadow: var(--base-box-shadow);
  padding: 0;

  color: var(--text-color);
  background: var(--background-color);

  &.modal {
    
    &-enter {
      opacity: 1;
      transform: scale(0.75);
    }

    &-enter-active {
      opacity: 1;
      transform: scale(1);
      transition: transform 250ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
    }

    &-leave {
      opacity: 1;
      transform: scale(1);

      &::backdrop {
        opacity: 0.4;
      }
    }

    &-leave-active {
      opacity: 0.01;
      transform: scale(0.25);
      transition: opacity 100ms ease-in,
                  transform 100ms cubic-bezier(0.6, -0.28, 0.735, 0.045);

      &::backdrop {
        opacity: 0.01;
        transition: opacity 100ms ease-in;
      }
    }
  }

  &::backdrop {
    background: black;
    opacity: 0.4;
  }

  &>header {
    height: 53px;
    border-bottom: var(--base-border);
    position: relative;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    h1 {
      font-weight: var(--font-weight-light);
      font-size: var(--font-size-md);
      margin: 0;
      padding: 0;
    }

    button.close {
      position: absolute;
      right: var(--spacing);
      top: var(--spacing);

      border: 0;
      height: 16px;
      width: 16px;
      margin: 0;
      padding: 0;
      background: transparent;

      color: var(--text-secondary-color);
      cursor: pointer;

      // Let the button deal with all mouse events.
      // Without this the octicon resets the cursor when
      // hovering over the <path>.
      .octicon { pointer-events: none; }

      &:hover {
        color: var(--text-color);
      }

      &:focus {
        outline: 0;
      }
    }
  }

  .dialog-content {
    padding: var(--spacing-double);
  }

  .dialog-footer {
    
    border-top: var(--base-border);
    padding: var(--spacing-double);
    
    display: flex;
    flex-direction: row;
    justify-content: flex-end;

    button {
      margin-right: var(--spacing-half);

      &:last-child {
        margin-right: 0;
      }
    }
  }

  &#rename-branch { min-width: 400px; }
}

